--- a/app/src/main/res/menu/menu_acerca_de.xml
+++ b/app/src/main/res/menu/menu_acerca_de.xml
@@ -10,4 +10,7 @@
     <item
         android:id="@+id/item_cerrar_sesion"
         android:title="@string/cerrarSesion" />
-</menu>
+    <item
+        android:id="@+id/verMapa"
+        android:title="Ver mapa" />
+    </menu>
