--- a/app/src/main/res/layout/fragment_sodas.xml
+++ b/app/src/main/res/layout/fragment_sodas.xml
@@ -6,13 +6,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Customer.SodasFragment">
 
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <ListView
-            android:id="@+id/list"
+            android:id="@+id/lista_sodas"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +21,4 @@
             app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
-
-
-
 </FrameLayout>
