--- a/app/src/main/res/layout/template_soda.xml
+++ b/app/src/main/res/layout/template_soda.xml
@@ -18,6 +18,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:padding="16dp"
                 android:layout_weight="1">
 
                 <TextView
@@ -25,15 +26,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Nombre_soda"
+                    android:layout_marginBottom="8dp"
                     android:textColor="@android:color/black"
                     android:textSize="24sp" />
 
-                <TextView
-                    android:id="@+id/correo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/email"
-                    android:textSize="18sp" />
+                <!--<TextView-->
+                    <!--android:id="@+id/correo"-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:text="@string/email"-->
+                    <!--android:textSize="18sp" />-->
 
                 <TextView
                     android:id="@+id/telefono"
