--- a/app/src/main/res/layout/template_ingrediente.xml
+++ b/app/src/main/res/layout/template_ingrediente.xml
@@ -23,7 +23,7 @@
             android:scaleType="centerCrop" />
 
         <TextView
-            android:id="@+id/descripcion"
+            android:id="@+id/titulo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
