--- a/app/src/main/res/layout/fragment_soda_products.xml
+++ b/app/src/main/res/layout/fragment_soda_products.xml
@@ -27,7 +27,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <in.srain.cube.views.GridViewWithHeaderAndFooter xmlns:android="http://schemas.android.com/apk/res/android"
+        <in.srain.cube.views.GridViewWithHeaderAndFooter
             android:id="@+id/gridview"
             android:layout_width="match_parent"
             android:layout_height="0dp"
@@ -43,11 +43,29 @@
             android:padding="5dp"
             android:stretchMode="columnWidth"
             android:verticalSpacing="5dp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/ordenar_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/nombre_soda" />
+            app:layout_constraintTop_toBottomOf="@+id/nombre_soda">
+
+        </in.srain.cube.views.GridViewWithHeaderAndFooter>
+
+        <Button
+            android:id="@+id/ordenar_button"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            style="@style/Widget.AppCompat.Button.Colored"
+            android:enabled="false"
+            android:layout_marginStart="8dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:text="@string/order"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </FrameLayout>
