--- a/app/src/main/res/layout/template_pedido.xml
+++ b/app/src/main/res/layout/template_pedido.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
     android:paddingTop="8dp"
     android:paddingBottom="8dp">
-
 
     <LinearLayout
         android:layout_width="0dp"
@@ -19,7 +17,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/customer_name"
+            android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:drawableStart="@drawable/baseline_person_black_24"
