--- a/app/src/main/res/layout/activity_agregar_producto.xml
+++ b/app/src/main/res/layout/activity_agregar_producto.xml
@@ -97,6 +97,22 @@
 
             </android.support.design.widget.TextInputLayout>
 
+            <Switch
+                android:id="@+id/switch_activate"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="12dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:foregroundGravity="left"
+                android:gravity="center_vertical"
+                android:text="@string/activate_product"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/campo_precio" />
+
             <Button
                 android:id="@+id/btnGuardar"
                 style="@style/Widget.AppCompat.Button.Colored"
@@ -111,7 +127,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/campo_precio" />
+                app:layout_constraintTop_toBottomOf="@+id/switch_activate" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
