--- a/app/src/main/res/layout/fragment_customer_orders.xml
+++ b/app/src/main/res/layout/fragment_customer_orders.xml
@@ -6,7 +6,7 @@
     tools:context=".Soda.OrdersFragment">
 
     <ListView
-        android:id="@+id/listViewOrdersSoda"
+        android:id="@+id/listViewOrdersCustomer"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 </FrameLayout>
